--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
+    "fs": "^0.0.1-security",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
