--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,6 +2,9 @@
   "name": "front-end",
   "version": "0.1.0",
   "private": true,
+
+  "proxy": "https://cors-anywhere.herokuapp.com/",
+
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
